--- a/fda/FirebaseApp/app.json
+++ b/fda/FirebaseApp/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "teste",
-    "slug": "teste",
+    "name": "FirebaseApp",
+    "slug": "FirebaseApp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
