--- a/my/ReactNavigationTest/package.json
+++ b/my/ReactNavigationTest/package.json
@@ -19,7 +19,8 @@
     "react-native-screens": "~3.29.0",
     "expo-router": "~3.4.8",
     "expo-linking": "~6.2.2",
-    "expo-constants": "~15.4.5"
+    "expo-constants": "~15.4.5",
+    "react-native-reanimated": "~3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
