--- a/my/FirebaseTest/package.json
+++ b/my/FirebaseTest/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactnavigationtest",
+  "name": "firebasetest",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,21 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/material-bottom-tabs": "^6.2.26",
     "@react-navigation/native": "^6.1.15",
-    "@react-navigation/native-stack": "^6.9.23",
+    "@react-navigation/native-stack": "^6.9.24",
     "expo": "~50.0.11",
-    "expo-constants": "~15.4.5",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.8.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-vector-icons": "^10.0.3"
+    "@react-native-async-storage/async-storage": "1.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
