--- a/fda/DevPost/package.json
+++ b/fda/DevPost/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "date-fns": "^3.6.0",
     "expo": "~50.0.13",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.9.0",
