--- a/fda/DevPost/package.json
+++ b/fda/DevPost/package.json
@@ -19,10 +19,12 @@
     "firebase": "^10.9.0",
     "react": "18.2.0",
     "react-native": "0.73.5",
+    "react-native-image-picker": "^7.1.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.0.3",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "expo-image-picker": "~14.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
