--- a/my/ChooseIcon/app.json
+++ b/my/ChooseIcon/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "teste",
-    "slug": "teste",
+    "name": "ChooseIcon",
+    "slug": "ChooseIcon",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
