--- a/my/DragAndDrop/package.json
+++ b/my/DragAndDrop/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "teste",
+  "name": "draganddrop",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -12,7 +12,11 @@
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-beautiful-dnd": "^13.1.1",
+    "react-native": "0.73.6",
+    "react-native-draggable-flatlist": "^4.0.1",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
