--- a/my/TDTest/app.json
+++ b/my/TDTest/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "ThinkDoSketch",
-    "slug": "ThinkDoSketch",
+    "name": "TDTest",
+    "slug": "TDTest",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -21,19 +21,13 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      },
-      "package": "com.mateusjustino.ThinkDoSketch"
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-font"
-    ],
-    "extra": {
-      "eas": {
-        "projectId": "323883cd-ed05-4df0-b79d-c62db0afea5f"
-      }
-    }
+    ]
   }
 }
