--- a/my/TDTest/package.json
+++ b/my/TDTest/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "thinkdosketch",
+  "name": "tdtest",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,31 +10,20 @@
   },
   "dependencies": {
     "@10play/tentap-editor": "^0.4.55",
-    "@10play/tentap-editor-my": "./src/tentap-editor",
-    "@expensify/react-native-live-markdown": "^0.1.59",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
-    "editorjs-viewer-native": "^1.0.1",
     "expo": "~50.0.14",
     "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
-    "firebase": "^10.10.0",
-    "moment": "^2.30.1",
+    "firebase": "^10.11.0",
     "moment-timezone": "^0.5.45",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
-    "react-native-htmlview": "^0.17.0",
-    "react-native-markdown-display": "^7.0.2",
-    "react-native-pell-rich-editor": "^1.9.0",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-shared-element": "^0.8.9",
-    "react-native-webview": "^13.6.4",
-    "react-navigation-shared-element": "^3.1.3"
+    "react-native-webview": "13.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
