--- a/my/TDTest/package.json
+++ b/my/TDTest/package.json
@@ -20,10 +20,17 @@
     "moment-timezone": "^0.5.45",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-device-info": "^10.13.2",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-htmlview": "^0.17.0",
+    "react-native-localize": "^3.1.0",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-webview": "13.6.4"
+    "react-native-timezone": "^3.0.1",
+    "react-native-webview": "13.6.4",
+    "react-native-reanimated": "~3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
