--- a/my/TDTest2/package.json
+++ b/my/TDTest2/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "dotenv": "^16.4.5",
     "expo": "~51.0.17",
     "expo-font": "~12.0.7",
     "expo-navigation-bar": "~3.0.6",
@@ -21,10 +22,11 @@
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-draggable-flatlist": "^4.0.1",
+    "react-native-email-link": "^1.16.1",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-reanimated": "~3.10.1",
     "react-native-svg": "15.2.0"
   },
   "devDependencies": {
